fix: Improve table layout and visibility

--- a/tacview.css
+++ b/tacview.css
@@ -12,8 +12,25 @@ table
 	border-collapse: collapse;
 	text-align: center;
 	vertical-align: middle;
-	width: 80%;
+	width: 100%;
 	margin: auto;
+	table-layout: fixed;
+}
+
+td, th {
+	padding: 5px;
+	text-align: center;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+tr:nth-child(even) {
+	background-color: #2a2a2a;
+}
+
+tr:nth-child(odd) {
+	background-color: #333;
 }
 
 h1
